--- a/docs/UML/class_index.adoc
+++ b/docs/UML/class_index.adoc
@@ -29,7 +29,7 @@
 [.xcode]
 * link:/releases/PROC/{proc_release}/decision_language.html#_tracked_quantitative_variable_class[TRACKED_QUANTITATIVE_VARIABLE^]
 [.xcode]
-* link:/releases/PROC/{proc_release}/decision_language.html#_tracked_variable_class[TRACKED_VARIABLE^]
+* link:/releases/PROC/{proc_release}/decision_language.html#_tracked_state_variable_class[TRACKED_STATE_VARIABLE^]
 [.xcode]
 * link:/releases/PROC/{proc_release}/decision_language.html#_value_snapshot_class[VALUE_SNAPSHOT^]
 
