--- a/docs/process_examples/master09-cha2ds_vasc.adoc
+++ b/docs/process_examples/master09-cha2ds_vasc.adoc
@@ -6,63 +6,72 @@
 
 This DLM is a direct translation of the Cambio https://github.com/gdl-lang/common-clinical-models/blob/master/guidelines/CHA2DS2-VASc.v1.gdl[CHA2DS2-VASc.v1^] GDL2 guideline.
 
+[source,ts]
 ----
 dlm CHA2DS2_VASc.v0.5.0
 
-language
-    original_language = <[ISO_639-1::en]>
-    
-description
-    lifecycle_state = <"unmanaged">
-    original_author = <
-        ["name"] = <"Rong Chen">
-        ["email"] = <"models@cambiocds.com">
-        ["organisation"] = <"Cambio Healthcare Systems <https://www.cambiogroup.com/our-solutions/cambio-cds-clinical-decision-support/>">
-        ["date"] = <"2016-12-16">
-    >
-    details = <
-        ["en"] = <
-            language = <[ISO_639-1::en]>
-            purpose = <"To record an individual's CHA2DS2-VASc score parameters and total score.">
-                use = <
-                    "Use for stroke risk stratification in patients with atrial fibrillation.
-                     CHA2DS2-VASc is an acronym, with each factor contributing points to the 
-                        total score:
-                        - Congestive heart failure 1p
-                        - Hypertension 1p
-                        - Age ≥75 years 2p
-                        - Diabetes1p
-                        - Stroke 2p
-                        - Vascular disease 1p
-                        - Age 65–74 years 1p
-                        - Sex category 1p for female
-                >
-            >
-        >
-    >
-    copyright = <"© 2020 openEHR Foundation">
-    licence = <"Creative Commons CC-BY <https://creativecommons.org/licenses/by/3.0/>">
-    references = <
-        "[1] Lip GY, Nieuwlaat R, Pisters R, Lane DA, Crijns HJ. Refining clinical risk
-            stratification for predicting stroke and thromboembolism in atrial 
-            fibrillation using a novel risk factor-based approach: the euro heart survey
-            on atrial fibrillation. Chest. 2010 Feb;137(2):263-72.
-            
-        [2] Camm a J, Kirchhof P, Lip GYH, Schotten U, Savelieva I, Ernst S, et al. 
-            Guidelines for the management of atrial fibrillation: the Task Force for 
-            the Management of Atrial Fibrillation of the European Society of Cardiology
-            (ESC). Eur Heart J. 2010 Oct;31(19):2369–429.
-            
-        [3] Lip GY, Frison L, Halperin JL, Lane DA. Identifying patients at high risk 
-            for stroke despite anticoagulation: a comparison of contemporary stroke risk 
-            stratification schemes in an anticoagulated atrial fibrillation cohort. 
-            Stroke. 2010 Dec;41(12):2731-8.
-            
-        [4] Friberg L, Rosenqvist M, Lip GY. Evaluation of risk stratification schemes 
-            for ischaemic stroke and bleeding in 182 678 patients with atrial 
-            fibrillation: the Swedish Atrial Fibrillation cohort study. 
-            Eur Heart J. 2012 Jun;33(12):1500-10."
-    >
+definitions -- Descriptive
+
+    language = {
+            original_language: [ISO_639-1::en]
+        }
+        ;
+
+    description = {
+            lifecycle_state: "unmanaged",
+            original_author: {
+                name:           "Thomas Beale",
+                email:          "models@cambiocds.com",
+                organisation:   "Cambio Healthcare Systems <https://www.cambiogroup.com/our-solutions/cambio-cds-clinical-decision-support/>",
+                date:           "2016-12-16"
+            },
+            details: {
+                "en" : {
+                    language: [ISO_639-1::en],
+                    purpose: "To record an individual's CHA2DS2-VASc score parameters and total score.",
+                    use:     "Use for stroke risk stratification in patients with atrial fibrillation.
+                             CHA2DS2-VASc is an acronym, with each factor contributing points to the 
+                                total score:
+                                - Congestive heart failure 1p
+                                - Hypertension 1p
+                                - Age ≥75 years 2p
+                                - Diabetes1p
+                                - Stroke 2p
+                                - Vascular disease 1p
+                                - Age 65–74 years 1p
+                                - Sex category 1p for female"
+                }
+            },
+            copyright:  "© 2021 openEHR Foundation",
+            licence:    "Creative Commons CC-BY <https://creativecommons.org/licenses/by/3.0/>",
+            ip_acknowledgements: {
+                "ClinRisk" : "This content developed from original publication of
+                    © 2017 ClinRisk Ltd., see https://qrisk.org",
+                "QRISK" : "QRISK® is a registered trademark of the University of Nottingham and EMIS"
+            },
+            references: [
+                "Lip GY, Nieuwlaat R, Pisters R, Lane DA, Crijns HJ. Refining clinical risk
+                    stratification for predicting stroke and thromboembolism in atrial 
+                    fibrillation using a novel risk factor-based approach: the euro heart survey
+                    on atrial fibrillation. Chest. 2010 Feb;137(2):263-72.",
+
+                "Camm a J, Kirchhof P, Lip GYH, Schotten U, Savelieva I, Ernst S, et al. 
+                    Guidelines for the management of atrial fibrillation: the Task Force for 
+                    the Management of Atrial Fibrillation of the European Society of Cardiology
+                    (ESC). Eur Heart J. 2010 Oct;31(19):2369–429.",
+
+                "Lip GY, Frison L, Halperin JL, Lane DA. Identifying patients at high risk 
+                    for stroke despite anticoagulation: a comparison of contemporary stroke risk 
+                    stratification schemes in an anticoagulated atrial fibrillation cohort. 
+                    Stroke. 2010 Dec;41(12):2731-8.",
+
+                "Friberg L, Rosenqvist M, Lip GY. Evaluation of risk stratification schemes 
+                    for ischaemic stroke and bleeding in 182 678 patients with atrial 
+                    fibrillation: the Swedish Atrial Fibrillation cohort study. 
+                    Eur Heart J. 2012 Jun;33(12):1500-10."
+            ]
+        }
+        ;
         
 use
     BASIC: Basic_patient_data
@@ -93,7 +102,7 @@ rules -- Main
     | Convert sex to binary gender;
     | treat indeterminate sex as female
     |
-    gender: Terminology_code <<sexes>>
+    gender: Terminology_code <<sexes>},
         Result := case BASIC.sex in
             =====================
             {[male]}:     [male],
@@ -182,91 +191,94 @@ rules -- Output
             ==============
         ;
 
-terminology
-    term_definitions = <
-        ["en"] = <
-            ["date_of_birth"] = <
-                text = <"Date of birth">
-                provenance = <["GDL2"] = <"gt0009">>
-            >
-            ["age_in_years"] = <
-                text = <"Age (years)">
-                provenance = <["GDL2"] = <"gt0010">>
-            >
-            ["age_category"] = <
-                text = <"Age category">
-                provenance = <["GDL2"] = <"gt0017">>
-            >
-            ["gender"] = <
-                text = <"Gender">
-                provenance = <["GDL2"] = <"gt0009", "gt0016">>
-            >
-            ["has_congestive_heart_failure"] = <
-                text = <"xxx">
-                provenance = <["GDL2"] = <"gt0011", "gt0018">>
-            >
-            ["has_hypertension"] = <
-                text = <"xxx">
-                provenance = <["GDL2"] = <"gt0012", "gt0019">>
-            >
-            ["has_diabetes"] = <
-                text = <"Diabetes">
-                provenance = <["GDL2"] = <"gt0015", "gt0022">>
-            >
-            ["has_stroke_TIA_thromboembolism"] = <
-                text = <"Stroke/TIA/Thromboembolism">
-                provenance = <["GDL2"] = <"gt0013", "gt0020">>
-            >
-            ["has_vascular_disease"] = <
-                text = <"Vascular disease">
-                provenance = <["GDL2"] = <"gt0014", "gt0021">>
-            >
-            ["male"] = <
-                text = <"Male gender">
-                provenance = <["GDL2"] = <"gt0035">>
-            >
-            ["female"] = <
-                text = <"Female gender">
-                provenance = <["GDL2"] = <"gt0025">>
-            >
-            ["CHA2DS2_VASc_score"] = <
-                text = <"CHA2DS2VASc score">
-                provenance = <["GDL2"] = <"gt0011">>
-            >
-            ["risk_assessment"] = <
-                text = <"Risk assessment">
-                provenance = <["GDL2"] = <"gt0005">>
-            >
-            ["annual_stroke_risk"] = <
-                text = <"Annual stroke risk">
-                provenance = <["GDL2"] = <"gt0006">>
-            >
-            ["annual_stroke_TIA_thromboembolism_risk"] = <
-                text = <"Annual risk of stroke/TIA/thromboembolism">
-                provenance = <["GDL2"] = <"gt0011">>
-            >
-            ["low_risk"] = <
-                text = <"Low risk">
-            >
-            ["intermediate_risk"] = <
-                text = <"Intermediate risk">
-            >
-            ["high_risk"] = <
-                text = <"High risk">
-            >
-        >
-    >
+definitions -- Terminology
 
-    value_sets = <
-        ["genders"] = <
-            id = <"genders">
-            members = <"male", "female">
-        >
-        ["risks"] = <
-            id = <"risks">
-            members = <"low_risk", "intermediate_risk", "high_risk">
-        >
-    >
+    terminology = {
+        term_definitions: {
+            "en" : {
+                "date_of_birth" : {
+                    text: "Date of birth",
+                    provenance: "GDL2" : ["gt0009"]
+                },
+                "age_in_years" : {
+                    text: "Age (years)",
+                    provenance: "GDL2" : ["gt0010"]
+                },
+                "age_category" : {
+                    text: "Age category",
+                    provenance: "GDL2" : ["gt0017"]
+                },
+                "gender" : {
+                    text: "Gender",
+                    provenance: "GDL2" : ["gt0009", "gt0016"]
+                },
+                "has_congestive_heart_failure" : {
+                    text: "xxx",
+                    provenance: "GDL2" : ["gt0011", "gt0018"]
+                },
+                "has_hypertension" : {
+                    text: "xxx",
+                    provenance: "GDL2" : ["gt0012", "gt0019"]
+                },
+                "has_diabetes" : {
+                    text: "Diabetes",
+                    provenance: "GDL2" : ["gt0015", "gt0022"]
+                },
+                "has_stroke_TIA_thromboembolism" : {
+                    text: "Stroke/TIA/Thromboembolism",
+                    provenance: "GDL2" : ["gt0013", "gt0020"]
+                },
+                "has_vascular_disease" : {
+                    text: "Vascular disease",
+                    provenance: "GDL2" : ["gt0014", "gt0021"]
+                },
+                "male" : {
+                    text: "Male gender",
+                    provenance: "GDL2" : ["gt0035"]
+                },
+                "female" : {
+                    text: "Female gender",
+                    provenance: "GDL2" : ["gt0025"]
+                },
+                "CHA2DS2_VASc_score" : {
+                    text: "CHA2DS2VASc score",
+                    provenance: "GDL2" : ["gt0011"]
+                },
+                "risk_assessment" : {
+                    text: "Risk assessment",
+                    provenance: "GDL2" : ["gt0005"]
+                },
+                "annual_stroke_risk" : {
+                    text: "Annual stroke risk",
+                    provenance: "GDL2" : ["gt0006"]
+                },
+                "annual_stroke_TIA_thromboembolism_risk" : {
+                    text: "Annual risk of stroke/TIA/thromboembolism",
+                    provenance: "GDL2" : ["gt0011"]
+                },
+                "low_risk" : {
+                    text: "Low risk"
+                },
+                "intermediate_risk" : {
+                    text: "Intermediate risk"
+                },
+                "high_risk" : {
+                    text: "High risk"
+                }
+            }
+        },
+        value_sets: {
+            "genders" : {
+                id: "genders",
+                members: ["male", "female"]
+            },
+            "risks" : {
+                id: "risks",
+                members: ["low_risk", "intermediate_risk", "high_risk"]
+            }
+        }
+    }
+    ;
 
 ----
 
